Including headers in source added to sub-libs. This allows the headers to show up in the appropriate groups in Visual Studio

--- a/lib/opencl/CMakeLists.txt
+++ b/lib/opencl/CMakeLists.txt
@@ -20,7 +20,10 @@
 # OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
 # SOFTWARE.
 
-add_library(xreg_opencl OBJECT xregOpenCLConvert.cpp
+file(GLOB_RECURSE XREG_CUR_LIB_HEADERS "${CMAKE_CURRENT_SOURCE_DIR}/*.h")
+
+add_library(xreg_opencl OBJECT ${XREG_CUR_LIB_HEADERS}
+                               xregOpenCLConvert.cpp
                                xregOpenCLMath.cpp
                                xregOpenCLSpatial.cpp
                                xregOpenCLSys.cpp
