--- a/lib/version/CMakeLists.txt
+++ b/lib/version/CMakeLists.txt
@@ -23,6 +23,9 @@
 configure_file("${CMAKE_CURRENT_SOURCE_DIR}/xregVersionConfigVals.cpp.in"
                "${CMAKE_CURRENT_BINARY_DIR}/xregVersionConfigVals.cpp" @ONLY)
 
-add_library(xreg_version OBJECT xregVersionInfo.cpp
+file(GLOB_RECURSE XREG_CUR_LIB_HEADERS "${CMAKE_CURRENT_SOURCE_DIR}/*.h")
+
+add_library(xreg_version OBJECT ${XREG_CUR_LIB_HEADERS}
+                                xregVersionInfo.cpp
                                 ${CMAKE_CURRENT_BINARY_DIR}/xregVersionConfigVals.cpp)
 
