--- a/lib/common/CMakeLists.txt
+++ b/lib/common/CMakeLists.txt
@@ -20,7 +20,10 @@
 # OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
 # SOFTWARE.
 
-add_library(xreg_common OBJECT xregAssert.cpp
+file(GLOB_RECURSE XREG_CUR_LIB_HEADERS "${CMAKE_CURRENT_SOURCE_DIR}/*.h")
+
+add_library(xreg_common OBJECT ${XREG_CUR_LIB_HEADERS}
+                               xregAssert.cpp
                                xregStringUtils.cpp
                                xregFilesystemUtils.cpp
                                xregSampleUtils.cpp
