--- a/lib/hdf5/CMakeLists.txt
+++ b/lib/hdf5/CMakeLists.txt
@@ -20,5 +20,7 @@
 # OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
 # SOFTWARE.
 
-add_library(xreg_hdf5 OBJECT xregHDF5.cpp)
+file(GLOB_RECURSE XREG_CUR_LIB_HEADERS "${CMAKE_CURRENT_SOURCE_DIR}/*.h")
+
+add_library(xreg_hdf5 OBJECT ${XREG_CUR_LIB_HEADERS} xregHDF5.cpp)
 
