--- a/lib/image/CMakeLists.txt
+++ b/lib/image/CMakeLists.txt
@@ -20,7 +20,10 @@
 # OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
 # SOFTWARE.
 
-add_library(xreg_image OBJECT xregVariableSpacedSlices.cpp
+file(GLOB_RECURSE XREG_CUR_LIB_HEADERS "${CMAKE_CURRENT_SOURCE_DIR}/*.h")
+
+add_library(xreg_image OBJECT ${XREG_CUR_LIB_HEADERS}
+                              xregVariableSpacedSlices.cpp
                               xregLabelWarping.cpp
                               xregHUToLinAtt.cpp
                               xregProjData.cpp
