--- a/lib/opencv/CMakeLists.txt
+++ b/lib/opencv/CMakeLists.txt
@@ -20,5 +20,7 @@
 # OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
 # SOFTWARE.
 
-add_library(xreg_opencv OBJECT xregOpenCVUtils.cpp)
+file(GLOB_RECURSE XREG_CUR_LIB_HEADERS "${CMAKE_CURRENT_SOURCE_DIR}/*.h")
+
+add_library(xreg_opencv OBJECT ${XREG_CUR_LIB_HEADERS} xregOpenCVUtils.cpp)
 
