--- a/lib/optim/CMakeLists.txt
+++ b/lib/optim/CMakeLists.txt
@@ -20,7 +20,10 @@
 # OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
 # SOFTWARE.
 
-add_library(xreg_optim OBJECT xregLineSearchOpt.cpp
+file(GLOB_RECURSE XREG_CUR_LIB_HEADERS "${CMAKE_CURRENT_SOURCE_DIR}/*.h")
+
+add_library(xreg_optim OBJECT ${XREG_CUR_LIB_HEADERS}
+                              xregLineSearchOpt.cpp
                               xregSimAnn.cpp
                               xregDiffEvo.cpp
                               xregPSO.cpp
