--- a/lib/ray_cast/CMakeLists.txt
+++ b/lib/ray_cast/CMakeLists.txt
@@ -20,7 +20,10 @@
 # OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
 # SOFTWARE.
 
-add_library(xreg_ray_cast OBJECT xregRayCastSyncBuf.cpp
+file(GLOB_RECURSE XREG_CUR_LIB_HEADERS "${CMAKE_CURRENT_SOURCE_DIR}/*.h")
+
+add_library(xreg_ray_cast OBJECT ${XREG_CUR_LIB_HEADERS}
+                                 xregRayCastSyncBuf.cpp
                                  xregRayCastInterface.cpp
                                  xregRayCastBaseCPU.cpp
                                  xregRayCastLineIntCPU.cpp
