--- a/lib/regi/CMakeLists.txt
+++ b/lib/regi/CMakeLists.txt
@@ -20,7 +20,10 @@
 # OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
 # SOFTWARE.
 
-add_library(xreg_regi OBJECT xregPairedPointRegi3D3D.cpp
+file(GLOB_RECURSE XREG_CUR_LIB_HEADERS "${CMAKE_CURRENT_SOURCE_DIR}/*.h")
+
+add_library(xreg_regi OBJECT ${XREG_CUR_LIB_HEADERS}
+                             xregPairedPointRegi3D3D.cpp
                              xregICP3D3D.cpp
                              xregSE3OptVars.cpp
                              sim_metrics_2d/xregImgSimMetric2D.cpp
