--- a/lib/spatial/CMakeLists.txt
+++ b/lib/spatial/CMakeLists.txt
@@ -20,7 +20,10 @@
 # OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
 # SOFTWARE.
 
-add_library(xreg_spatial OBJECT xregSpatialPrimitives.cpp
+file(GLOB_RECURSE XREG_CUR_LIB_HEADERS "${CMAKE_CURRENT_SOURCE_DIR}/*.h")
+
+add_library(xreg_spatial OBJECT ${XREG_CUR_LIB_HEADERS}
+                                xregSpatialPrimitives.cpp
                                 xregFitCircle.cpp
                                 xregFitPlane.cpp
                                 xregKDTree.cpp)
