--- a/lib/transforms/CMakeLists.txt
+++ b/lib/transforms/CMakeLists.txt
@@ -20,7 +20,10 @@
 # OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
 # SOFTWARE.
 
-add_library(xreg_transforms OBJECT xregRotUtils.cpp
+file(GLOB_RECURSE XREG_CUR_LIB_HEADERS "${CMAKE_CURRENT_SOURCE_DIR}/*.h")
+
+add_library(xreg_transforms OBJECT ${XREG_CUR_LIB_HEADERS}
+                                   xregRotUtils.cpp
                                    xregRigidUtils.cpp
                                    xregPerspectiveXform.cpp
                                    xregPointCloudUtils.cpp
