--- a/docker/Dockerfile.xreg.ubuntu
+++ b/docker/Dockerfile.xreg.ubuntu
@@ -1,9 +1,14 @@
 # This Docker file is used to build an image with the xReg library and executables,
-# and should be tagged something like xreg-ubuntu-${ubuntu_version}
+# and should be tagged something like xreg-${os_name}-${os_version}
 
-ARG ubuntu_version=16.04
+# choose either ubuntu or centos
+ARG os_name=ubuntu
 
-FROM xreg-deps-ubuntu-${ubuntu_version}
+# for ubuntu choose 16.04, 18.04, or 20.04
+# for centos choose 7 or 8
+ARG os_version=16.04
+
+FROM xreg-deps-${os_name}-${os_version}
 
 WORKDIR /xreg_build
 
@@ -12,6 +17,8 @@ COPY . .
 RUN mkdir build && cd build && \
     cmake -G Ninja -DCMAKE_BUILD_TYPE=Release -DBUILD_SHARED_LIBS:BOOL=ON \
                    -DCMAKE_POSITION_INDEPENDENT_CODE:BOOL=ON \
+                   -DTBB_DIR:PATH="/opt/tbb/cmake" \
+                   -DXREG_USE_LEGACY_FIND_TBB:BOOL=OFF \
           .. && \
     cmake --build . && cmake --build . --target install && \
     cd / && rm -rf xreg_build
