--- a/docker/Dockerfile.xreg-dist-bin.ubuntu
+++ b/docker/Dockerfile.xreg-dist-bin.ubuntu
@@ -1,21 +1,32 @@
 # This Docker file is used to build the xReg distributable executables on linux
+# Use a tag like xreg-dist-${os_name}-${os_version} (e.g. xreg-dist-centos-7)
 
-ARG ubuntu_version=16.04
+# choose either ubuntu or centos
+ARG os_name=ubuntu
 
-FROM xreg-ubuntu-${ubuntu_version}
+# for ubuntu choose 16.04, 18.04, or 20.04
+# for centos choose 7 or 8
+ARG os_version=16.04
 
+FROM xreg-${os_name}-${os_version}
+
+# need to repeat these due to scope
+ARG os_name
+ARG os_version
+
+# name of the dist. directory
 ARG xreg_dist_str=xreg
-
-RUN apt-get update && apt-get install -y --no-install-recommends \
-      python3     \
-      patchelf && \
-    rm -rf /var/lib/apt/lists/*
 
 WORKDIR /
 
 COPY ./dist/make_linux_dist.py .
 
-RUN mkdir ${xreg_dist_str} && LD_LIBRARY_PATH="/usr/local/lib:$LD_LIBRARY_PATH" python3 make_linux_dist.py /usr/local ${xreg_dist_str}
+COPY ./dist/${os_name}_dist_pkgs xreg_dist_pkgs
 
-RUN tar czf ${xreg_dist_str}.tar.gz ${xreg_dist_str}
+RUN ./xreg_dist_pkgs
+
+RUN export XREG_NAME="${xreg_dist_str}-${os_name}-${os_version}" && mkdir $XREG_NAME && \
+    LD_LIBRARY_PATH="/usr/local/lib:/usr/local/lib64:/opt/tbb/lib/intel64/gcc4.7:$LD_LIBRARY_PATH" \
+    python3 make_linux_dist.py /usr/local $XREG_NAME && \
+    tar czf $XREG_NAME.tar.gz $XREG_NAME
 
