--- a/cmake/xregConfig.cmake.in
+++ b/cmake/xregConfig.cmake.in
@@ -3,5 +3,8 @@
 
 include(${CMAKE_CURRENT_LIST_DIR}/xreg-targets.cmake)
 
+set(XREG_USE_SYSTEM_OPENCL @XREG_USE_SYSTEM_OPENCL@)
+set(XREG_USE_LEGACY_FIND_TBB @XREG_USE_LEGACY_FIND_TBB@)
+
 check_required_components(xreg)
 
