fixing install target on Windows   * putting headers in <prefix>/include/xreg   * cmake config in <prefix>/lib/cmake/xreg

--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -94,7 +94,7 @@ endif ()
 # e.g. "$<BUILD_INTERFACE:${XREG_LIB_INC_DIRS}>"
 target_include_directories(xreg PUBLIC
                                   "$<BUILD_INTERFACE:${XREG_LIB_INC_DIRS}>"
-                                  $<INSTALL_INTERFACE:include>)
+                                  $<INSTALL_INTERFACE:${XREG_INC_INSTALL_DIR}>)
 target_include_directories(xreg SYSTEM PUBLIC ${XREG_EXT_LIB_INC_DIRS})
 
 target_link_libraries(xreg PUBLIC ${XREG_EXT_LIBS_TO_LINK} ${XREG_THIRD_PARTY_DEPS})
