--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,6 +22,11 @@
 
 cmake_minimum_required(VERSION 3.13.0 FATAL_ERROR)
 
+if (APPLE)
+  # Target MacOS 10.14, Mojave
+  set (CMAKE_OSX_DEPLOYMENT_TARGET "10.14" CACHE STRING "MacOS Deployment Target")
+endif ()
+
 # Version format is YYYY.MM.DD for a release and YYYY.MM.DD.1 for devel after the release
 project(xreg VERSION 2020.09.26.1)
 
