--- a/docker/Dockerfile.xreg-deps
+++ b/docker/Dockerfile.xreg-deps
@@ -90,14 +90,14 @@ RUN mkdir nlopt_build && cd nlopt_build && \
 
 # build ITK 4.13.2
 RUN mkdir itk_build && cd itk_build && \
-    wget https://github.com/InsightSoftwareConsortium/ITK/releases/download/v4.13.2/InsightToolkit-4.13.2.tar.gz && \
-    tar xf InsightToolkit-4.13.2.tar.gz && cd InsightToolkit-4.13.2 && \
+    wget https://github.com/InsightSoftwareConsortium/ITK/releases/download/v5.1.1/InsightToolkit-5.1.1.tar.gz && \
+    tar xf InsightToolkit-5.1.1.tar.gz && cd InsightToolkit-5.1.1 && \
     mkdir build && cd build && \
     cmake -G Ninja -DCMAKE_BUILD_TYPE=Release -DBUILD_SHARED_LIBS:BOOL=ON \
           -DCMAKE_CXX_STANDARD:STRING="11" \
           -DBUILD_TESTING:BOOL=OFF -DBUILD_EXAMPLES:BOOL=OFF \
           -DITK_USE_GPU:BOOL=OFF -DModule_ITKReview:BOOL=ON \
-          -DModule_LabelErodeDilate:BOOL=ON -DVCL_INCLUDE_CXX_0X:BOOL=ON \
+          -DModule_LabelErodeDilate:BOOL=ON \
          .. && \
     cmake --build . && cmake --build . --target install && \
     cd / && rm -rf itk_build
