exporting all symbols on windows for xReg lib and CMAES lib

--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -20,6 +20,10 @@
 # OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
 # SOFTWARE.
 
+if (WIN32)
+	set(CMAKE_WINDOWS_EXPORT_ALL_SYMBOLS ON)
+endif ()
+
 set(XREG_THIRD_PARTY_DEPS cmaes)
 if (NOT XREG_USE_SYSTEM_OPENCL)
   set(XREG_THIRD_PARTY_DEPS OpenCL ${XREG_THIRD_PARTY_DEPS})
