--- a/lib/file_formats/CMakeLists.txt
+++ b/lib/file_formats/CMakeLists.txt
@@ -1,6 +1,6 @@
 # MIT License
 #
-# Copyright (c) 2020 Robert Grupp
+# Copyright (c) 2020-2021 Robert Grupp
 #
 # Permission is hereby granted, free of charge, to any person obtaining a copy
 # of this software and associated documentation files (the "Software"), to deal
@@ -36,5 +36,6 @@ add_library(xreg_file_formats OBJECT ${XREG_CUR_LIB_HEADERS}
                                      xregH5CamModelIO.cpp
                                      xregH5ProjDataIO.cpp
                                      xregH5SE3OptVarsIO.cpp
-                                     xregWriteVideo.cpp)
+                                     xregWriteVideo.cpp
+                                     xregRadRawProj.cpp)
 
