updating the names of the convert DICOM exes

--- a/apps/image_io/convert_resample_dicom/CMakeLists.txt
+++ b/apps/image_io/convert_resample_dicom/CMakeLists.txt
@@ -1,6 +1,6 @@
 # MIT License
 #
-# Copyright (c) 2020 Robert Grupp
+# Copyright (c) 2020-2021 Robert Grupp
 #
 # Permission is hereby granted, free of charge, to any person obtaining a copy
 # of this software and associated documentation files (the "Software"), to deal
@@ -20,7 +20,7 @@
 # OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
 # SOFTWARE.
 
-set(EXE_NAME "${XREG_EXE_PREFIX}convert-dicom")
+set(EXE_NAME "${XREG_EXE_PREFIX}convert-dicom-vols")
 
 add_executable(${EXE_NAME} xreg_convert_resample_dicom_main.cpp)
 
