adding routine for fitting orbit (thin cylinder)

--- a/lib/spatial/CMakeLists.txt
+++ b/lib/spatial/CMakeLists.txt
@@ -1,6 +1,6 @@
 # MIT License
 #
-# Copyright (c) 2020 Robert Grupp
+# Copyright (c) 2020-2021 Robert Grupp
 #
 # Permission is hereby granted, free of charge, to any person obtaining a copy
 # of this software and associated documentation files (the "Software"), to deal
@@ -26,5 +26,6 @@ add_library(xreg_spatial OBJECT ${XREG_CUR_LIB_HEADERS}
                                 xregSpatialPrimitives.cpp
                                 xregFitCircle.cpp
                                 xregFitPlane.cpp
+                                xregFitCylinder.cpp
                                 xregKDTree.cpp)
 
