--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -2,7 +2,10 @@
 # Linux builds include pre-built dependencies via containers.
 
 name: Build
-on: pull_request
+on:
+  pull_request:
+  push:
+    branches: [github-actions]
 
 jobs:
   ubuntu_20_04_build:
@@ -11,3 +14,5 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
+      - run: ls
+      - run: echo "done!"
