--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -96,7 +96,7 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
-      - run: pwd
-      - run: ls
+      - run: brew install ninja
+        shell: bash
       - run: ./example_build_script_2
         shell: bash
