--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -93,6 +93,8 @@ jobs:
 
   macos_build:
     runs-on: macos-10.15
+    env:
+      XREG_INSTALL_DIR: $HOME/xreg-macos
 
     steps:
       - uses: actions/checkout@v2
